[package]
name = "rsPomodoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.31", features = ["wasm-bindgen"] }
clap = { version = "4.4.8", features = ["cargo"] }
lowcharts = "*"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"



#[package.metadata]
#include = ["src/ascii_art/ascii_numbers.txt", "src/history/session_history.txt"]

# Optional: for console logging in browser
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["console_error_panic_hook"]